# JSON-journal

./: .gitignore  Changelog.md  Jenkinsfile.groovy  LICENSE  Makefile  README.md  charts.py  pyproject.toml  read_data.py  test.py
json_journal/: charts.py  data_analysis.py  file_io.py  filters.py  main.py  organise_data.py  preconditioning.py  read_data.py  tabulate_data.py
json_journal/cli/: __init__.py  balance.py
json_journal/report/: balance.py
requirements/: dev.txt
test/report/: test_balance.py
tests/: test.py  test_analysis.py  test_filters.py  test_preconditioning.py  test_tabulate.py
