[project]
dependencies = [
  "tabulate==0.9.0"
]
name = "json_journal"
version = "0.0.0"
authors = [
  { name="George Duffett" },
]
description = "JSON Journal"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
ledger = "json_journal.cli:cli"
